k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend

spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  
  template:
    metadata:
      labels:
        app: backend

    spec: 
      containers:
        - name: app-backend
          image: shepherd777/devsecops-backend:7886f9eeb23312c22b1421cbb276285336d0da78
          ports:
            - containerPort: 5000    
        
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"


          livenessProbe:
            httpGet:
              path: /health
              port: 5000

          readinessProbe:
            httpGet:
            path: /health
            port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          imagePullPolicy: Always
