k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service

spec:
  type: NodePort
  selector:
    app: backend
    color: blue
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
